--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "better-auth": "^1.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
+    "next-safe-action": "^8.0.7",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
